<resources>
    <string name="app_name">Voyageur</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">386260395468-2n5ilio1go0tnvq1pddj087e0gekcmei.apps.googleusercontent.com</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="confirm_text">Confirm</string>
    <string name="filter_activities">Filter Activities</string>
    <string name="drafts">Drafts</string>
    <string name="final_activities">Final</string>
    <string name="filter_activity_type">Filter activities by type</string>
    <string name="no_user_data">No user data available</string>
    <string name="no_pending_requests">You\'re all caught up! No pending requests.</string>
    <string name="pending_friend_requests">%1$d Pending Friend Requests</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="total_price">Total price: %.2f CHF</string>
    <string name="overview_searchbar_placeholder">Search trips…</string>
    <string name="activities_searchbar_placeholder">Search activities…</string>
    <string name="overview_header_text">Your trips</string>
    <string name="unknown_place">Unknown place</string>
    <string name="location_permission_required">Location permission is required to fetch your location.</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="make_trip_public">Allow others to discover this trip</string>
    <string name="channel_name">Voyageur Notifications</string>
    <string name="channel_description">Notifications from Voyageur App</string>
    <string name="check_network_settings">Please check your network settings.</string>
    <string name="notification_no_internet_title">No Internet Connection</string>
    <string name="notification_no_internet_text">Please check your network settings.</string>
    <string name="trip_copied_message">%1$s copied successfully to the overview screen!</string>
    <string name="no_weeks_weekly_view">You have no weeks scheduled yet.</string>
    <string name="view_details">View Details</string>

<!-- Search bar -->
    <string name="search_places">Search places…</string>
    <string name="search_users">Search users…</string>
    <string name="empty"> </string>

<!-- AI ASSISTANT -->
    <string name="ask_assistant">Ask the AI assistant!</string>
    <string name="prompt">Prompt</string>
    <string name="ask">Ask</string>
    <string name="settings">Settings</string>
    <string name="settings_subtitle">Remember to click on the \'ask\' button after changing the settings</string>
    <string name="provide_final_activities">Provide final activities with date and time (recommended for trips shorter than a week)</string>
    <string name="use_user_interests">Use only your profile\'s interests</string>
    <string name="use_participants_interests">Use all participants\'s interests</string>
    <string name="close">Close</string>
    <string name="assistant_initial_screen">Please enter a prompt to receive activity recommendations. You can mention what types of activities you would like to do on your trip, or leave it empty for general recommendations based on the trip details. Feel free to use the settings button to customize the recommendations.</string>
    <string name="assistant_error">An error has occurred. Please try again.</string>
    <string name="assistant_no_activities">You added all the activities to your trip. Please provide a new prompt to receive more recommendations.</string>
    <string name="possible_enum_type_prompt">The activity type can only be %1$s, but you can recommend any activity and set the type to OTHER.</string>
    <string name="date_prompt">between the start date year %1$d month %2$d day %3$d and the end date year %4$d month %5$d day %6$d</string>
    <string name="interests_prompt">The activities should focus on the following interests (if applicable): %1$s.</string>
    <string name="already_present_activities_prompt">The following activities are already present in the trip: %1$s. Please avoid them.</string>
    <string name="draft_vs_final_prompt_final">Make a full schedule by listing specific activities, including separate activities for eating, transport, etc. Instead of travel from airport, say just arrival in Paris in the afternoon, unless otherwise specified by the user.</string>
    <string name="draft_vs_final_prompt_draft">List a lot of popular specific activities to do on a trip.</string>
    <string name="full_trip_prompt">%1$s The trip, called %2$s, with description %3$s, type %4$s and location %5$s, takes place %6$s with the following prompt: %7$s. Descriptions should be detailed. %8$s %9$s %10$s</string>

    <!-- OVERVIEW SCREEN -->
    <string name="your_trips_text">Your trips</string>
    <string name="floating_button">"Floating action button"</string>
    <string name="empty_trip_prompt">You have no trips yet.</string>
    <string name="denied_calendar_permission">Permission denied. Cannot open calendar.</string>
    <string name="selected_image_description">Selected image</string>
    <string name="trip_image_overview_description">Trip image overview</string>
    <string name="collapse_text">Collapse</string>
    <string name="expand_text">Expand</string>
    <string name="delete_text">Delete</string>
    <string name="add_to_calendar_text">Add to calendar</string>
    <string name="remove_trip_text">Remove Trip</string>
    <string name="cancel_text">Cancel</string>
    <string name="remove_text">Remove</string>
    <string name="no_participants_text">No participants.</string>
    <string name="one_participant_text">1 Participant:</string>
    <string name="remove_trip_confirmation">Are you sure you want to remove %1$s from your trips?</string>
    <string name="deleted_trip_text">Trip successfully deleted</string>
    <string name="additional_participants">and %1$d more</string>
    <string name="participants_count">%1$d Participants:</string>
    <string name="no_compatible_calendar">No compatible calendar app found.</string>
    <string name="show_all_trips">Show all trips</string>
    <string name="show_favorite_trips">Show favorite trips</string>
    <string name="leave_trip_text">Leave Trip</string>
    <string name="leave_trip_confirmation">Are you sure you want to leave %1$s?</string>
    <string name="trip_left_text">You have left the trip successfully</string>
    <string name="leave">Leave</string>
    <string name="fail_leave_trip">Failed to leave the trip: %1$s</string>
    <string name="no_favorite_trips">You have no favorite trips yet.</string>

<!-- BY DAY/ WEEkLY Screens -->
    <string name="invalid_date">No compatible calendar app found.</string>
    <string name="additional_activities">and %1$d more</string>
    <string name="weekly_text">Weekly</string>
    <string name="daily_text">Daily</string>
    <string name="slash_text"> / </string>
    <string name="empty_activities_prompt">There are no activities scheduled.</string>
    <string name="ask_assistant_button">Ask Assistant</string>

<!-- Activities One Day -->
    <string name="no_trip_selected">No trip selected. Should not happen</string>
    <string name="no_day_selected">No day selected. Should not happen</string>
    <string name="no_activities">You have no activities yet.</string>
    <string name="delete">Delete</string>

<!-- Activities -->
    <string name="no_activities_scheduled">"No activities have been scheduled yet."</string>
    <string name="location_text">Location</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="delete_activity_confirmation">Are you sure you want to delete this activity?</string>

<!-- Add Activity -->
    <string name="create_activity">Create a New Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="back">Back</string>
    <string name="name_activity">Name the activity</string>
    <string name="activity_title">Title *</string>
    <string name="describe_activity">Describe the activity</string>
    <string name="activity_description">Description</string>
    <string name="activity_date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="estimated_price_CHF">Estimated Price (CHF)</string>
    <string name="enter_estimated_price">Enter estimated price</string>
    <string name="select_activity_type">Select Activity Type</string>
    <string name="save">Save</string>
    <string name="select_activity_date">Please select an activity date first</string>
    <string name="date_between_trip_dates">Please select a date within the trip\'s scheduled dates</string>
    <string name="select_start_time">Please select a start time first</string>
    <string name="end_time_after_start">End time must be after start time</string>
    <string name="default_times">No times selected, defaults to 00:00 – 23:59</string>
    <string name="created_draft">No date assigned, created as draft</string>
    <string name="default_end_time">No end time selected, defaults to 23:59</string>
    <string name="fail_add_activity">Failed to add/edit activity: %1$s</string>
    <string name="error_add_activity">Error adding/editing activity: %1$s</string>

 <!-- Time Pickers -->
    <string name="ok">OK</string>
    <string name="select_time">Select time</string>

 <!-- Add Trip -->
    <string name="create_trip">Create a New Trip</string>
    <string name="selected_image">Selected Image</string>
    <string name="default_image">Default trip image</string>
    <string name="select_image_gallery">Select Image from Gallery</string>
    <string name="access_gallery">This app needs access to your photos to allow you to select an image for your trip.</string>
    <string name="name_trip">Name the trip</string>
    <string name="trip_title">Trip *</string>
    <string name="describe_trip">Describe the trip</string>
    <string name="trip_description">Description</string>
    <string name="start_date">Start Date *</string>
    <string name="end_date">End Date *</string>
    <string name="business">Business</string>
    <string name="tourism">Tourism</string>
    <string name="save_trip">Save Trip</string>
    <string name="select_trip_type">Select Trip Type</string>
    <string name="select_both_dates">Please select both start and end dates</string>
    <string name="dates_must_not_be_in_past">Start and end dates cannot be in the past</string>
    <string name="end_date_not_in_past">End date cannot be in the past</string>
    <string name="end_after_start">End date cannot be before start date</string>
    <string name="trip_created_success">Trip created successfully!</string>
    <string name="trip_create_failure">Failed to create trip: %1$s</string>
    <string name="trip_create_error">Error creating trip: %1$s</string>
    <string name="trip_updated_success">Trip updated successfully!</string>
    <string name="trip_updated_failure">Failed to update trip: %1$s</string>
    <string name="trip_updated_error">Error updating trip: %1$s</string>
    <string name="fail_upload_image">Failed to upload image: %1$s</string>
    <string name="add_participants_text_when_not_in_edit_mode">"To add participants, first create a trip and then send them invitations from Settings."</string>
<!-- USER DROPDOWN -->
    <string name="profile_picture_description">Profile Picture</string>
    <string name="participants_label">Participants</string>
    <string name="remove_label">Remove</string>
    <string name="cancel_label">Cancel</string>
    <string name="invite_label">Invite</string>
    <string name="null_selected_trip_label">This should not happen.</string>

 <!-- Photos Screen -->
    <string name="add_photo">Add Photo</string>
    <string name="gallery_permission">We need permission to access your gallery.</string>
    <string name="photos">Photos</string>
    <string name="no_photos">You have no photos yet.</string>
    <string name="full_size_photo">Full-size photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="download_photo">Download Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="confirmation_delete_photo">Are you sure you want to remove this photo?</string>
    <string name="left_button">Go left button</string>
    <string name="right_button">Go right button</string>
    <string name="photo_downloaded">Photo downloaded</string>
    <string name="photo_deleted">Photo successfully deleted</string>
    <string name="photo_added">Photo successfully added</string>
    <string name="search_activities">Search activities...</string>
    <string name="select_activities_by_type">Select Activity Types</string>
    <string name="apply">Apply</string>
    <string name="filter_activities_button">Filter Activities</string>
    <string name="filter_activities_by_date">Filter by Date</string>
    <string name="filter_activities_by_type">Filter by Type</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="close_photo">Close Photo Dialog</string>

    <string name="unknown">Unknown</string>
    <string name="no_email">No Email</string>
    <string name="new_friend_request">New Friend Request</string>
    <string name="friend_request_message">%1$s sent you a friend request!</string>
    <string name="friend_request_accepted">Friend Request Accepted</string>
    <string name="friend_request_accepted_message">%1$s accepted your friend request!</string>
    <string name="remove_contact_error">Failed to update current user: %1$s</string>
    <string name="remove_contact_error_second">Failed to update second user: %1$s</string>
    <string name="accept_request_error">Failed to update sender: %1$s</string>
    <string name="accept_request_error_current">Failed to update current user: %1$s</string>
    <string name="friend_request_delete_error">Failed to delete friend request: %1$s</string>
    <string name="friend_request_delete_success">Friend request %1$s successfully deleted</string>
    <string name="no_trips_to_discover">No trips to discover</string>
    <string name="check_back_letter">Please check back later.</string>
    <string name="search_trips">Search trips...</string>
    <string name="copy_trip_button">Copy Trip Details</string>
    <string name="pending_trip_invites">Pending Trip Invites (%1$d)</string>
    <string name="no_pending_invites">No pending trip invites</string>
    <string name="from">From: %1$s</string>
    <string name="from_user">From: %1$s</string>
    <string name="trip_id">Trip ID: %1$s</string>
    <!-- Authentication -->
    <string name="welcome_text">Welcome</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="app_logo_content_description">App Logo</string>
    <string name="google_logo_content_description">Google Logo</string>
    <!-- Logs -->
    <string name="log_user_signed_in">User signed in: %1$s</string>
    <string name="log_sign_in_failed">Failed to sign in: %1$d</string>

    <string name="new_trip_invite">New Trip Invite</string>
    <string name="trip_invite_message">%1$s invited you to join the trip: %2$s</string>
    <string name="unknown_trip">Unknown Trip</string>
</resources>