...
  Scaffold(
      floatingActionButton = {
        if (!isReadOnlyView) {
          AddActivityButton(navigationActions)
        }
      },
      modifier = Modifier.testTag("byDayScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute(),
            userViewModel = userViewModel,
...
